--- a/index.html
+++ b/index.html
@@ -2,68 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href=".assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/main.css">
-  
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-<div class="container">
-  <!-- Sign-up form start -->
-   <div class="headerImage">
-    <img src="./assets/images/illustration-sign-up-mobile.svg" alt="illustration-sign-up-mobile">
-   </div>
+  <div class="container">
+    <img src="assets/images/illustration-sign-up-mobile.svg" alt="mobile logo image" class="mobile-logo">
 
-   <div class="header">
-    <h1>Stay updated!</h1>
-    <p>Join 60,000+ product managers receiving monthly updates on:</p>
-    </div>
-    
-    <div class="aboutList">
+    <div class="form-container">
+      <h1>Stay updated!</h1>
+      <p>Join 60,000+ product managers receiving monthly updates on:</p>
       <ul>
-        <li><img src="assets/images/icon-list.svg" alt="icon-list">Product discovery and building what matters</li>
-        <li><img src="assets/images/icon-list.svg" alt="icon-list">Measuring to ensure updates are a success</li>
-        <li><img src="assets/images/icon-list.svg" alt="icon-list">And much more!</li>
+        <li><img src="assets/images/icon-list.svg" alt="icon-list-logo"><p>Product discovery and building what matters</p></li>
+        <li class="measuringSuccess"><img src="assets/images/icon-list.svg" alt="icon-list-logo"><p>Measuring to ensure updates are a success</p></li>
+        <li><img src="assets/images/icon-list.svg" alt="icon-list-logo"><p class="muchMore">And much more!</p></li>
       </ul>
+      <label for="email" class="emailAddress">Email address</label>
+      <form action="index.html" method="post">
+        <input class="email" type="email" id="email" name="email" placeholder="email@company.com">
+        <button type="submit">Subscribe to monthly newsletter</button>
+      </form>
     </div>
-<!-- Sign-up form start -->
-   <form action="#" method="POST">
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" id="email" name="email" placeholder="email@company.com" required>      
-      </div>
-      <button type="submit"> Subscribe to monthly newsletter</button>
-    </form>
-  <!-- Sign-up form end -->
-
-  
-  <!-- Success message start -->
-<!--
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-  -->
-
-  <!-- Success message end -->
-  
-</div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
+
+ 
+
+
+
+ 
+
+ 
+
+ <!-- Sign-up form end -->
+
+ <!-- Success message start -->
+
+ <!--
+ Thanks for subscribing!
+
+ A confirmation email has been sent to ash@loremcompany.com. 
+ Please open it and click the button inside to confirm your subscription.
+
+ Dismiss message -->
+
+ <!-- Success message end -->
+ 
+ <div class="attribution">
+   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+   Coded by <a href="#">Your Name Here</a>.
+ </div>
 </body>
 </html>
